Updated docs with common info.